# semanticfilesearcher

./: .gitignore  OPENSOURCE_LICENSES.txt  README.md  SemanticFileSearcher.spec  debug_tag_list.py  main.py  pyproject.toml  requirements.txt  test_embedding.py
.planning/: Patch.md  closed.md  draft.md  troubleshooting.md
core/: config.py  indexer.py
core/database/: sqlite_manager.py  vector_db.py
core/embedding/: adapter.py  qwen_adapter.py
core/indexing/: chunker.py  monitor.py  queue_manager.py  scanner.py
core/tagging/: auto_tagger.py  llm_adapters.py
scripts/: build_app.ps1  convert_icon.py  installer.iss  migrate_faiss_to_lancedb.py  process_icon.py  test_core_features.py
tests/: test_chunker.py  test_indexer_async.py  test_indexing_queue.py  test_tags.py
ui/: main_window.py  queue_dialog.py  settings_dialog.py  style_manager.py  tag_dialog.py  workers.py
ui/components/: badged_button.py  detail_pane.py  flow_layout.py  path_bar.py  result_item.py  sidebar.py  spinner.py  tag_input.py
ui/resources/: style.qss
ui/resources/styles/components/: main_window.qss  queue_dialog.qss  result_item.qss  tag_input.qss
ui/resources/styles/themes/: dark.qss  light.qss
