[project]
name = "semanticfilesearcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "google-genai>=1.0.0",
    "lancedb>=0.29.2",
    "openai>=2.16.0",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "pyside6>=6.10.1",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "transformers>=5.0.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
cpu = [
    "faiss-cpu>=1.13.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]
gpu = [
    "faiss-gpu-cu12>=1.13.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", extra = "gpu" },
    { index = "pypi", extra = "cpu" },
]
torchaudio = [
    { index = "pytorch-cu126", extra = "gpu" },
    { index = "pypi", extra = "cpu" },
]
torchvision = [
    { index = "pytorch-cu126", extra = "gpu" },
    { index = "pypi", extra = "cpu" },
]
